roles/unifi_controller/files/unifi-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: unifi-tcp
  namespace : unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: "unifi-shared-svc"
spec:
  selector:
    app: unifi-controller
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name : 8080
  - protocol: TCP
    port: 8443
    targetPort: 8443
    name : 8443
  - protocol: TCP
    port: 8843
    targetPort: 8843
    name : 8843
  - protocol: TCP
    port: 8880
    targetPort: 8880
    name : 8880
  - protocol: TCP
    port: 6789
    targetPort: 6789
    name : 6789
  type: LoadBalancer 
  LoadBalancerIP: 10.10.0.231
---

kind: Service
apiVersion: v1
metadata:
  name: unifi-udp
  namespace: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: "unifi-shared-svc"
spec:
  selector:
    app: unifi-controller
  ports:
  - protocol: UDP
    port: 3478
    targetPort: 3478
    name : 3478
  type: LoadBalancer 
  LoadBalancerIP: 10.10.0.231

---
