roles/unifi_controller/files/unifi-ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: unifi-controller
  namespace: unifi
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`unifi-test.local.lan`) 
    kind: Rule
    services:
    - name: unifi-tcp
      port: 8443
